--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,11 +16,15 @@ body {
     background-size: 100%;
 }
 
-#questions {
+#intro {
     background: white;
     text-align: center;
 }
 
+#title {
+    font-size: 32px;
+    color: red;
+}
 #timer {
     /* float: right; */
 }
